Lagt gallery-appen i settings, og laget lenke/urls.
Husk å importere globalsettings til din settings.

--- a/nablaweb/templates/base.html
+++ b/nablaweb/templates/base.html
@@ -79,6 +79,7 @@
         <ul>
             <li><a href="{% url event_list %}">Arrangement</a></li>
             <li><a href="{% url news_list %}">Nyheter</a></li>
+            <li><a href="{% url gallery.views.index %}">Galleri</a></li>
             <li><a href="{% url accounts.views.list %}">Brukerliste</a></li>
             <li><a href="/stillinger/">Stillinger</a></li>
             <li><a href="/admin">Admin</a></li>
