--- a/nablaweb/templates/flatpages/default.html
+++ b/nablaweb/templates/flatpages/default.html
@@ -1,10 +1,10 @@
-<!DOCTYPE HTML PUBLIC "-//W3C//DTD HTML 4.0 Transitional//EN"
-    "http://www.w3.org/TR/REC-html40/loose.dtd">
-    <html>
-      <head>
-        <title>{{ flatpage.title }}</title>
-      </head>
-      <body>
-        {{ flatpage.content }}
-      </body>
-    </html>
+{% extends "base.html" %}
+{% load bbcode %}
+{% block title %}
+    {{ block.super }} - {{ flatpage.title }}
+{% endblock %}
+
+{% block content %}
+    <h1>{{ flatpage.title }}</h1>
+    {{ flatpage.content }}
+{% endblock %}
