--- a/nablaweb/templates/base.html
+++ b/nablaweb/templates/base.html
@@ -187,7 +187,7 @@ messages
         {% if active_jobs %}
             <ul>
                 {% for job in active_jobs %}
-                <li><a href="/stillinger/{{ job.id }}">{{ job.headline }}</a></li>
+                <li><a href="/stillinger/{{ job.id }}">{{ job.headline }} ved {{ job.company.headline }}</a><br>Frist: {{ job.deadline_date }}</li>
                 {% endfor %}
             </ul>
         {% else %}
