--- a/nablaweb/templates/accounts/list.html
+++ b/nablaweb/templates/accounts/list.html
@@ -2,32 +2,32 @@
 
 {% block content %}
 
-<h4>Brukere</h4>
+<h1>Komponenter og nullvektorer</h1>
 
-<table>
+<table id="user_list">
 <tr>
 	<th>Brukernavn</th>
 	<th>Navn</th>
 	<th>Grupper</th>
 </tr>
-{% for user in users.object_list %}
+{% for user in users %}
 	<tr class="{% cycle odd even %}">
 	
-		<td>
+		<td class="cell_username">
 		{# Brukernavn med lenke til profilen #}
 			<a href="{% url accounts.views.view_member_profile user.username %}">
 				{{ user.username }}
 			</a>
 		</td>
 
-		<td>
+		<td class="cell_name">
 			{{ user.first_name }}
 			{{ user.last_name }}
 		</td>
 
-		<td> 
+		<td class="cell_groups"> 
 		{# Grupper brukeren er med i #}
-
+        {# TODO: Bruk img istedenfor #}
 			{% for group in user.groups.all %}
 				{{ group.name }}
 			{% endfor %}
@@ -37,7 +37,7 @@
 {% endfor %}
 </table>
 
-
+{% comment %}
 <div class="pagination">
 	<span class="step-links">
 		{% if users.has_previous %}
@@ -53,5 +53,6 @@
 		{% endif %}
 	</span>
 </div>
+{% endcomment %}
 
 {%endblock%}
