Lagt til STATIC_URL i base.html

--- a/nablaweb/templates/base.html
+++ b/nablaweb/templates/base.html
@@ -6,15 +6,15 @@
 		<meta http-equiv="Content-Type" content="text/html; charset=utf-8">
 		<title>{% block title %}Ceres{% endblock title%}</title>
 
-		<link type="text/css" rel="stylesheet" href="../css/main.css" />
+        <link type="text/css" rel="stylesheet" href="{{ STATIC_URL}}css/main.css" />
 		{% block css %}
-		<link type="text/css" rel="stylesheet" href="../css/top_menu.css" />
-		<link type="text/css" rel="stylesheet" href="../css/login_table.css" />
-		<link type="text/css" rel="stylesheet" href="../css/arr_oversikt.css" />
-		<link type="text/css" rel="stylesheet" href="../css/kalender.css" />
-		<link type="text/css" rel="stylesheet" href="../css/organisering.css" />
-		<link type="text/css" rel="stylesheet" href="../css/artikler.css" />
-		<link type="text/css" rel="stylesheet" href="../css/right_sidebar.css" />
+		<link type="text/css" rel="stylesheet" href="{{ STATIC_URL}}css/top_menu.css" />
+		<link type="text/css" rel="stylesheet" href="{{ STATIC_URL}}css/login_table.css" />
+		<link type="text/css" rel="stylesheet" href="{{ STATIC_URL}}css/arr_oversikt.css" />
+		<link type="text/css" rel="stylesheet" href="{{ STATIC_URL}}css/kalender.css" />
+		<link type="text/css" rel="stylesheet" href="{{ STATIC_URL}}css/organisering.css" />
+		<link type="text/css" rel="stylesheet" href="{{ STATIC_URL}}css/artikler.css" />
+		<link type="text/css" rel="stylesheet" href="{{ STATIC_URL}}css/right_sidebar.css" />
 		{% endblock css %}
 	</head>
 
