--- a/nablaweb/templates/base.html
+++ b/nablaweb/templates/base.html
@@ -31,7 +31,7 @@
 			<li id="forumKnapp"><a href="forum.html">FORUM</a></li>
 		</ul>
 		<span class="clear">&nbsp;</span>
-		<img src="../img/nabla.png" /><h1>Linjeforeningen Nabla</h1>
+        <img src="{{ STATIC_URL}}img/nabla.png" /><h1>Linjeforeningen Nabla</h1>
 
 		<form action="login.php" method="post">
 		<ul class="loginBox">
