Lagt til en try/except i accounts/admin.py
Og lagt ut old_base.html

--- a/nablaweb/templates/base.html
+++ b/nablaweb/templates/base.html
@@ -1,22 +1,25 @@
 <!DOCTYPE HTML>
 <html>
-	<head>
-		<meta name="copyright" content="WebKom" />
-		<meta name="author" content="Fredrik Nicolai Krohg" />
-		<meta http-equiv="Content-Type" content="text/html; charset=utf-8">
-		<title>{% block title %}Ceres{% endblock title%}</title>
+    <head>
+        <meta name="copyright" content="WebKom" />
+        <meta name="author" content="Fredrik Nicolai Krohg" />
+        <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
+        <title>{% block title %}Ceres{% endblock title%}</title>
 
         <link type="text/css" rel="stylesheet" href="{{ STATIC_URL}}css/main.css" />
-		{% block css %}
-		<link type="text/css" rel="stylesheet" href="{{ STATIC_URL}}css/top_menu.css" />
-		<link type="text/css" rel="stylesheet" href="{{ STATIC_URL}}css/login_table.css" />
-		<link type="text/css" rel="stylesheet" href="{{ STATIC_URL}}css/arr_oversikt.css" />
-		<link type="text/css" rel="stylesheet" href="{{ STATIC_URL}}css/kalender.css" />
-		<link type="text/css" rel="stylesheet" href="{{ STATIC_URL}}css/organisering.css" />
-		<link type="text/css" rel="stylesheet" href="{{ STATIC_URL}}css/artikler.css" />
-		<link type="text/css" rel="stylesheet" href="{{ STATIC_URL}}css/right_sidebar.css" />
-		{% endblock css %}
-	</head>
+        {% block css %}
+        <link type="text/css" rel="stylesheet" href="{{ STATIC_URL}}css/top_menu.css" />
+        <link type="text/css" rel="stylesheet" href="{{ STATIC_URL}}css/login_table.css" />
+        <link type="text/css" rel="stylesheet" href="{{ STATIC_URL}}css/arr_oversikt.css" />
+        <link type="text/css" rel="stylesheet" href="{{ STATIC_URL}}css/kalender.css" />
+        <link type="text/css" rel="stylesheet" href="{{ STATIC_URL}}css/organisering.css" />
+        <link type="text/css" rel="stylesheet" href="{{ STATIC_URL}}css/artikler.css" />
+        <link type="text/css" rel="stylesheet" href="{{ STATIC_URL}}css/right_sidebar.css" />
+        <link type="text/css" href="{{ STATIC_URL }}css/redmond/jquery-ui-1.8.16.custom.css" rel="Stylesheet" />    
+        <script type="text/javascript" src="{{ STATIC_URL }}js/jquery-1.6.2.min.js"></script>
+        <script type="text/javascript" src="{{ STATIC_URL }}js/jquery-ui-1.8.16.custom.min.js"></script>
+        {% endblock css %}
+    </head>
 
 <body>
 	<div id="head">
