--- a/nablaweb/templates/news/news_detail_include.html
+++ b/nablaweb/templates/news/news_detail_include.html
@@ -5,38 +5,48 @@
 
 Innhold
 -------
-En enkel nyhet uten body (kun ingress).
+En news slik den vises på forsida.
+
 Skal inneholde:
     overskrift
-    ingress
-    forfatter
-    "Les mer"-lenke
+    Les mer/påmelding lenker
+    sted
+    tid
+    dato
 
-Variabler
+Nyttige variabler
 --------
-news                    News-objekt
+news                   News-objekt
     id                  
     headline            Tittelen
-    lead_paragraph      Ingressen
-    body            
+    lead_paragraph      Ingressen. Bruk |bbcode
+    body                Bruk |bbcode
     created_by          User-objekt
         id
         username        Forfatterens brukernavn
         get_full_name   Forfatterens navn
 
-URL til nyheten:
+URL til newsen:
 {% url news_detail news.id %}
 
+Filteret |naturalday kan funke på datoen.
+
 {% endcomment %}
-<div class="news">
-    <div class="news_text">
-        <h3>{{ news.headline }}</h3>
-        {% if news.created_by %}
-        <p>Skrevet av {{ news.created_by.get_full_name }}</p>
-        {% endif %}
 
-        {{ news.lead_paragraph|bbcode }}
+        <h2>{{ news.headline }}</h2>
+        <div class="meta">Nyhet</div>
 
-        <p><a href="{% url news_detail news.id %}">Les mer</a></p>
-    </div>
-</div>
+        <div class="innhWrapper">
+            <div class="detaljer">
+                <span class="tid">Postet {{ news.created_date|naturalday }}</span>
+                <a  class="person" 
+                    {% if news.created_by %}
+                    href="{% url accounts.views.view_member_profile news.created_by.username %}"
+                    {% endif %}>
+                    {{ news.created_by.get_full_name }}</a>
+            </div>
+            <div class="tekstOgBilde">
+                {{ news.lead_paragraph|bbcode }}
+                <p><a href="{% url news_detail news.id %}">Les mer</a></p>
+            </div>
+        </div>
