--- a/nablaweb/templates/base.html
+++ b/nablaweb/templates/base.html
@@ -30,14 +30,17 @@
 
 		
 		<ul id="headMenu">
-			<li><a href="omnabla.html">Om Nabla</a></li>
-			<li><a href="bedrifter.html">Bedrifter</a></li>
-			<li><a href="sosialt.html">Sosialt</a></li>
-			<li id="ar"><a href="arrangementer.html">Arrangementer</a></li>
-			<li id="forumKnapp"><a href="forum.html">FORUM</a></li>
+			<li><a href="#">Om Nabla</a></li>
+			<li><a href="#">Bedrifter</a></li>
+			<li><a href="#">Sosialt</a></li>
+            <li id="ar"><a href="{% url event_list %}">Arrangementer</a></li>
+			<li id="forumKnapp"><a href="#">FORUM</a></li>
 		</ul>
 		<span class="clear">&nbsp;</span>
-        <img src="{{ STATIC_URL}}img/nabla.png" /><h1>Linjeforeningen Nabla</h1>
+        <a style="text-decoration:none;"href="{% url homepage.views.start %}">
+            <img src="{{ STATIC_URL}}img/nabla.png" />
+            <h1>Linjeforeningen Nabla</h1>
+        </a>
 
         {% if not user.is_authenticated %}
 		<form action="/login/" method="post">
@@ -77,7 +80,7 @@
 							</div>
 						</div>
 						<div class="innh">
-							<a href="devel.nabla.no/arrangement{{ event.id }}"><h4>{{ event.headline }}</h4></a>
+							<a href="{% url event_detail event.id %}"><h4>{{ event.headline }}</h4></a>
                             {% if event.places %}
 							<p>{{ event.free_places}}/{{ event.places }}</p>
                             {% endif %}
@@ -97,7 +100,7 @@
 							</div>
 						</div>
 						<div class="innh">
-							<a href="devel.nabla.no/arrangement{{ event.id }}"><h4>{{ event.headline }}</h4></a>
+							<a href="{% url event_detail event.id %}"><h4>{{ event.headline }}</h4></a>
                             {% if event.places %}
 							<p>{{ event.free_places }}/{{ event.places }}</p>
                             {% endif %}
@@ -334,13 +337,18 @@ Morbi quis mattis sem. Vestibulum eget elit dolor, non venenatis risus. Nulla ri
 			</div>
 
 			<ul class="nav">
-				<li class="top"><a href="kontakt.html">Kontakt</a></li>
-				<li><a href="ny_student.html">Ny Student?</a></li>
-				<li class="bottom"><a href="siste_nytt.html">Hva Skjer?</a></li>
-				<li class="hover"><a href="nabladet.html">Siste Nablad</a></li>
-				<li class="top"><a href="bedpresser.html">Bedpresser</a></li>
-				<li><a href="login.html">Log Inn</a></li>
-				<li class="bottom"><a href="wiki.html">Fag Wiki</a></li>
+                <li class="top"><a href="{% url homepage.views.start %}">Forsida</a></li>
+				<li><a href="ny_student.html">List item</a></li>
+                <li><a href="{% url event_list %}">Arrangement</a></li>
+                <li><a href="{% url news_list %}">Nyheter</a></li>
+                <li><a href="{% url gallery.views.index %}">Galleriet</a></li>
+                <li><a href="{% url accounts.views.list %}">Brukerliste</a></li>
+                <li><a href="{% url accounts.views.user_register %}">Registrer deg</a></li>
+				<li class="bottom"><a href="siste_nytt.html">List item</a></li>
+				<li class="hover"><a href="nabladet.html">List item</a></li>
+                <li class="top"><a href="{% url bedpres_list %}">Bedriftspresentasjoner</a></li>
+				<li><a href="/logout/">Logg ut</a></li>
+				<li class="bottom"><a href="wiki.html">List item</a></li>
 			</ul>
 
 			<div id="sideCeller">
