Fikset litt på event_detail.html og accounts/list.html

--- a/nablaweb/templates/base.html
+++ b/nablaweb/templates/base.html
@@ -60,7 +60,7 @@
 	<div class="centeredContainer">
 
 		<div id="nesteArrang">
-			<a href="arr.html"><h3 class="overskrift">Forestående arrangementer</h3></a>
+			<a href="arr.html"><h3 class="overskrift">Kommende arrangementer</h3></a>
 
 			<!-- Denne tabellen skal bli generert av django slik at det er
 			relevante arrangementer som blir presentert, så lenge den bruker
