--- a/nablaweb/templates/base.html
+++ b/nablaweb/templates/base.html
@@ -42,7 +42,9 @@
             <h1>Linjeforeningen Nabla</h1>
         </a>
 
-        {% if not user.is_authenticated %}
+        {% if user.is_authenticated %}
+            <p>Logget inn: <a href="{% url accounts.views.edit_profile %}">{{ user.username }}</a> | <a href="/logout/">Logg ut</a></p>
+        {% else %}
 		<form action="/login/" method="post">
             {% csrf_token %}
             <ul class="loginBox">
@@ -269,23 +271,6 @@
 
 		</div>
 		<div class="middle">
-        {# MESSAGES { #}
-        {% comment %}
-            Inneholder meldinger til brukeren, med forskjellige css-klasser, som f.eks.
-            * error
-            * warning
-            * info
-        {% endcomment %}
-        {% if messages %}
-              {% for message in messages %}
-                <div class="ui-widget">
-                    <div class="ui-state-highlight ui-corner-all {{ message.tags }}"> 
-                         <p><span class="ui-icon ui-icon-info"></span><p>{{ message }}</p>
-                    </div>
-                </div>
-              {% endfor %}
-        {% endif %}
-        {# END MESSAGES #}
 			<div class="leftMargin">
 				&nbsp;
 			</div>
@@ -298,6 +283,22 @@
 					<div class="middleBox">
 
 						<div class="innh">
+
+                        {# MESSAGES { #}
+                        {% comment %}
+                            Inneholder meldinger til brukeren, med forskjellige css-klasser, som f.eks.
+                            * error
+                            * warning
+                            * info
+                        {% endcomment %}
+                        {% if messages %}
+                              {% for message in messages %}
+                            <div class="message {{ message.tags }}"> 
+                                <p>{{ message }}</p>
+                            </div>
+                              {% endfor %}
+                        {% endif %}
+                        {# END MESSAGES #}
                             {% block content %}
 							<h2>Arrangementoverskrift</h2>
 							<div class="meta">
@@ -332,23 +333,19 @@ Morbi quis mattis sem. Vestibulum eget elit dolor, non venenatis risus. Nulla ri
 			osv. -->
 			<div id="sok">
 			<form action="search.py" method="get">
-				<input class="box" type="text" placeholder="Søk..." name="sok" size="25" /><input type="image" id="searchKnapp" src="../img/go_knapp.png" name="submit" />
+                <input class="box" type="text" placeholder="Søk..." name="sok" size="25" /><input type="image" id="searchKnapp" src="{{ STATIC_URL }}img/go_knapp.png" name="submit" />
 			</form>
 			</div>
 
 			<ul class="nav">
                 <li class="top"><a href="{% url homepage.views.start %}">Forsida</a></li>
-				<li><a href="ny_student.html">List item</a></li>
                 <li><a href="{% url event_list %}">Arrangement</a></li>
+                <li><a href="{% url bedpres_list %}">Bedriftspresentasjoner</a></li>
                 <li><a href="{% url news_list %}">Nyheter</a></li>
                 <li><a href="{% url gallery.views.index %}">Galleriet</a></li>
                 <li><a href="{% url accounts.views.list %}">Brukerliste</a></li>
                 <li><a href="{% url accounts.views.user_register %}">Registrer deg</a></li>
-				<li class="bottom"><a href="siste_nytt.html">List item</a></li>
-				<li class="hover"><a href="nabladet.html">List item</a></li>
-                <li class="top"><a href="{% url bedpres_list %}">Bedriftspresentasjoner</a></li>
-				<li><a href="/logout/">Logg ut</a></li>
-				<li class="bottom"><a href="wiki.html">List item</a></li>
+				<li class="bottom"><a href="/logout/">Logg ut</a></li>
 			</ul>
 
 			<div id="sideCeller">
