--- a/nablaweb/avatar/templates/avatar/base.html
+++ b/nablaweb/avatar/templates/avatar/base.html
@@ -1,8 +1,1 @@
-<html>
-    <head>
-        <title>{% block title %}django-avatar{% endblock %}</title>
-    </head>
-    <body>
-        {% block content %}{% endblock %}
-    </body>
-</html>
+{% extends "base.html" %}
