--- a/nablaweb/avatar/templates/avatar/change.html
+++ b/nablaweb/avatar/templates/avatar/change.html
@@ -2,10 +2,10 @@
 {% load avatar_tags %}
 
 {% block content %}
-    <p>Your current avatar: </p>
+    <h2>Endre profilbilde </h2>
     {% avatar user %}
     {% if not avatars %}
-        <p>You do not yet have an avatar.  Please upload one now.</p>
+        <p>Du har ikke et profilbilde enda. Du kan laste opp et her.</p>
     {% else %}
     <form method="POST" action="">
       {% csrf_token %}
