--- a/nablaweb/templates/accounts/list.html
+++ b/nablaweb/templates/accounts/list.html
@@ -5,11 +5,11 @@
 <h2>Komponenter og nullvektorer</h2>
 
 <table id="user_list" width="100%">
-<tr>
+<thead>
 	<th>Brukernavn</th>
 	<th>Navn</th>
 	<th>Grupper</th>
-</tr>
+</thead>
 {% for user in users %}
 	<tr class="{% cycle odd even %}">
 	
