Lagt til quote på forsida via context processor

--- a/nablaweb/templates/base.html
+++ b/nablaweb/templates/base.html
@@ -358,8 +358,9 @@ Morbi quis mattis sem. Vestibulum eget elit dolor, non venenatis risus. Nulla ri
 					</ul>
 					</li>
 					<li>
-					<cite class="quote">Quote of the day</cite>
-					<cite>Iver Brevik ~ Fluid forelesning</cite>
+                        {{ random_quote.info }}<br />
+                        <cite class="quote">{{ random_quote }}</cite>
+                        <cite>{{ random_quote.author }}</cite>
 					</li>
 					<li class="end">
 					<a href="nabladet.html"><div class="img"></div></a>
