--- a/nablaweb/templates/gallery/album.html
+++ b/nablaweb/templates/gallery/album.html
@@ -1,21 +1,17 @@
 <p><a href="/gallery/">Galleri</a> >> </p>
 <h1> {{ album.title }} </h1>
 <p>{{ album.description }}</p>
+
 {% if album.picture_set.all %}
     <table>
     <tr width=20>
     {% for picture in album.picture_set.all %}
         <td>
-            <a href="picture/{{ forloop.counter }}"><img src="/nabla_media/{{ picture.thumbnail }}" width = 200 border=0 /></a>
-            </br>{{ picture.title }}
-                {% if delete_mode %}
-                    <a href="/gallery/album/{{ album.id }}/delete/{{ picture.id }}"><img src="/nabla_media/graphics/icon_deletelink.gif" border=0 width=15 length=15 /></a>
-		        {% endif %}
-            
+            <a href="picture/{{ picture.album_picnr }}"><img src="/nabla_media/{{ picture.thumbnail }}" width = 200 border=1 /></a>
         </td>
         {% if forloop.counter|divisibleby:"3" %}
-        </tr>
-        <tr>
+            </tr>
+            <tr>
         {% endif %}
     {% endfor %}
     </tr>
@@ -26,26 +22,11 @@
 <a href="/gallery/">Gå tilbake til galleriet</a>
 
 <!-- Dersom logget inn + rettigheter: -->
-{% if delete_mode %}
-     <p>
-        Ferdig å slette bilder
-        <a href="/gallery/album/{{ album.id }}/">
-            <img src="/nabla_media/graphics/icon-yes.gif" border=0 width=15 length=15></img>
-        </a>
-    </p>
-{% else %}
     <p>
-        Legg til bilde
-        <a href="/gallery/album/{{ album.id }}/add/">
-            <img src="/nabla_media/graphics/icon_addlink.gif" border=0 width=15 length=15></img>
+        <a href="/gallery/album/{{ album.id }}/add_pic/">
+            Legg til bilde
+        </a>
+        <a href="/gallery/album/{{ album.id }}/del/">
+            Slett album
         </a>
     </p>
-    {% if album.picture_set.all %}
-    <p>
-        Slett bilder
-        <a href="/gallery/album/{{ album.id }}/delete/0">
-            <img src="/nabla_media/graphics/icon_deletelink.gif" border=0 width=15 length=15></img>
-        </a>
-    </p>
-    {% endif %}
-{% endif %}
